# Intel-Mng-for-legal-and-real-estate

./: .env.example  .gitignore  COMPLETE_TESTING_SOLUTION.md  DEPLOYMENT.md  FOLDER_EXPLANATIONS.md  FOLDER_STRUCTURE.md  INDEXES_ADDED.md  OPERATIONS.md  PERFORMANCE_VALIDATION.md  PRE_DELIVERY_TEST_CHECKLIST.md  PRODUCTION_HARDENING.md  README.md  RELIABILITY_SUMMARY.md  REVISAO_SISTEMA.md  RUN_AND_TEST.md  SECURITY_IMPROVEMENTS.md  TECHNICAL_DOCUMENTATION.md  TESTING_WEB_UI.md  TEST_PROJECT_STEPS.md  VPS_FIX_COMMANDS.md  package-lock.json  package.json  quick-test.sh  turbo.json
.github/workflows/: deploy.yml
apps/api/: .env.example  .env.save  .eslintrc.json  AUDIT_SYSTEM.md  RELIABILITY_FEATURES.md  eslint-local-rules.cjs  package.json  vitest.config.ts
apps/gems/: .env.example  README.md  STRUCTURE.md  next.config.js  package.json  tsconfig.tsbuildinfo
apps/web/: .env.example  next.config.js  package.json  tsconfig.json
docs/api/: README.md
docs/architecture/: README.md
docs/audit/: README.md
docs/compliance/: MARCO1_EVIDENCIAS_TECNICAS.md  (+2 more)
scripts/: backup-database.sh  backup-files.sh  demo-milestone3.sh  deploy-gems-vps.sh  ensure-system-tenant.sh  ensure-system-tenant.sql  fix-all-esm-imports.sh  fix-all-imports.sh  fix-esm-final.sh  fix-esm-imports.sh  fix-imports-safe.sh  quick-client-demo.sh  quick-start.sh  reload-nginx.sh  restore-database.sh  restore-files.sh  run-migrations.sh  setup-nginx-vps.sh  start-demo-tunnel.sh  start-web-docker.sh  start-web-frontend.sh  validate-network-segregation.sh  verify-database.sh  verify-system.sh
services/intelligence/: pyproject.toml  requirements.txt
services/intelligence/src/: health.py  main.py
services/intelligence/src/config/: __init__.py
services/intelligence/src/models/: README.md
services/intelligence/src/services/: README.md  README_PROCESSADOR.md  processador_documentos_v3.py
services/intelligence/src/utils/: README.md
tests/: HOMOLOGATION_TEST_PLAN.txt  homologation-test-scenarios.sh
(+592 files in other folders)
