[tool.poetry]
name = "intelligence-services"
version = "1.0.0"
description = "AI/ML intelligence services for the platform"
authors = ["Platform Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
psutil = "^5.9.6"
# Dependências para processamento de documentos (Ref. Fontes 78, 79, 3, 75)
pytesseract = "^0.3.10"
Pillow = "^10.0.0"
pdf2image = "^1.16.3"
pdfplumber = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

